--- a/TaskBoard.WebApp/appsettings.json
+++ b/TaskBoard.WebApp/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=MyDB;User Id=sa;Password=yourStrongPassword12#;MultipleActiveResultSets=true;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": "Server=127.0.0.1;Port=3306;Database=taskboarddb;User Id=taskboarduser;Password=Taskboard#2024!;SslMode=None;AllowPublicKeyRetrieval=True;"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*"
 }
